# BioMoQA-RAG

./: .gitignore  API_DEPLOYMENT_GUIDE.md  EVALUATION_REPORT.md  FINAL_SUMMARY.md  GITHUB_SETUP.md  PHASE2_HYBRID_RETRIEVAL.md  README.md  REPORT.md  SUMMARY.md  SYSTEM_OVERVIEW.md  SYSTEM_READY.md  TESTING.md  V2_SUMMARY.md  V3.2_ELASTICSEARCH_UPGRADE.md  V3_SUMMARY.md  WORK_EXPLANATION.md  api_server.py  api_server_v2.py  api_server_v3.py  api_server_v3_fast.py  biomoqa-rag-v3-fast.service  biomoqa-rag.service  build_dense_index.py  clean_v2_results.py  compare_v1_v2.py  config.toml  evaluate_all.py  evaluate_alpha.py  evaluate_comparison.py  evaluate_modes.py  evaluate_retrieval.py  monitor_evaluation.sh  process_120_qa.py  process_120_qa_v2.py  process_120_qa_v3.py  pyproject.toml  rebuild_faiss_from_cache.py  requirements.txt  setup_service.sh  setup_v3_fast_service.sh  (+4 more)
archive/: test_es_query_debug.py  test_es_query_final.py
archive/old_docs/: DEPLOYMENT.md  LLM_INFERENCE_OPTIMIZATION.md  NEXT_IMPROVEMENTS.md  QUICKSTART.md  QUICKSTART_V2.md  READY_TO_USE.md  SERVER_STATUS.md  STATUS.md  V2_EVALUATION_IN_PROGRESS.md
archive/old_scripts/: analyze_v2_improvements.py  compare_v1_v2.py  evaluate_results.py  process_120_qa_via_api.py  test_phase2_speed.py  test_v2_improvements.py
data/: documents.pkl  seed_queries.txt
deploy/: DEPLOY_GUIDE.md  README.md  inventory.yml  playbook.yml
deploy/group_vars/: all.yml
deploy/templates/: biomoqa.env.j2  biomoqa.service.j2  config.toml.j2
docs/: IMPROVEMENTS_ROADMAP.md  RAG_EXPLAINED.md
eval/: eval_langgraph.py  evaluate_alpha.py  evaluate_bioasq_qa.py  evaluate_comparison.py  evaluate_modes.py  evaluate_retrieval.py  evaluate_semantic.py
results/: README.md  biod_questions.csv  biod_questions_README.md  evaluation_summary.txt  unified_questions.csv
scripts/: run_simple_test.py  test_prototype.py
src/: __init__.py  api_server.py  pipeline.py  pipeline_vllm_v2.py  pipeline_vllm_v3.py  pipeline_vllm_v3_fast.py
src/biomoqa_rag/: __init__.py  api_server.py  build_dense_index.py  config.py  pipeline.py  pipeline_langgraph.py
src/biomoqa_rag/extraction/: extractive_qa.py
src/biomoqa_rag/retrieval/: __init__.py  dense_retriever.py  doc_resolver.py  parallel_hybrid.py  query_parser.py  relevance_filter.py  reranker.py  sibils_retriever.py
src/generation/: __init__.py  llm_generator.py
src/retrieval/: dense_retriever.py  parallel_hybrid.py  query_expander.py  query_parser.py  relevance_filter.py  reranker.py  sibils_retriever.py
src/v1_archive/: pipeline_v1.py  pipeline_vllm_v1.py
